--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Authors's haven</title>
-</head>
-<body>
-<div id="App">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Karla|Quantico|Audiowide"
+      rel="stylesheet"
+      type="text/css"
+    />
 
-</div>
-</body>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Authors's haven</title>
+  </head>
+  <body>
+    <div id="App"></div>
+  </body>
 </html>
