--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link
-            href="https://fonts.googleapis.com/css?family=Quantico"
-            rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Quantico"
+      rel="stylesheet"
     />
-    <meta content="ie=edge" http-equiv="X-UA-Compatible"/>
+    <meta content="ie=edge" http-equiv="X-UA-Compatible" />
+
     <title>Authors's haven</title>
-</head>
-<body>
-<div id="App"></div>
-</body>
+  </head>
+  <body>
+    <div id="App"></div>
+  </body>
 </html>
