ft(article-crud): enable users create and view articles
- add routes for article creation and viewing
- add necessary pages for article creation and viewing
- write tests for all functionality

[Finishes #164798256]

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
       href="https://fonts.googleapis.com/css?family=Quantico"
       rel="stylesheet"
     />
+    <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase.js"></script>
+    <base href="/" />
     <meta content="ie=edge" http-equiv="X-UA-Compatible" />
 
     <link
