ft(view-edit-profile): enable users to view-edit their profiles - enable authenticated users to view and edit their profiles - add tests for profile and edit profile functionality
[Finishes #164798255]

--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-          integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <link
-            href="https://fonts.googleapis.com/css?family=Quantico"
-            rel="stylesheet"
+      crossorigin="anonymous"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+      rel="stylesheet"
     />
-    <meta content="ie=edge" http-equiv="X-UA-Compatible"/>
+    <link
+      href="https://fonts.googleapis.com/css?family=Quantico"
+      rel="stylesheet"
+    />
+    <meta content="ie=edge" http-equiv="X-UA-Compatible" />
 
+    <link
+      crossorigin="anonymous"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+      rel="stylesheet"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Authors's haven</title>
-</head>
-<body>
-<div id="App"></div>
-</body>
+  </head>
+  <body>
+    <div id="App"></div>
+  </body>
 </html>
