--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+<head>
+    <meta charset="UTF-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+          integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" rel="stylesheet">
     <link
-      href="https://fonts.googleapis.com/css?family=Quantico"
-      rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Quantico"
+            rel="stylesheet"
     />
-    <meta content="ie=edge" http-equiv="X-UA-Compatible" />
+    <meta content="ie=edge" http-equiv="X-UA-Compatible"/>
 
     <title>Authors's haven</title>
-  </head>
-  <body>
-    <div id="App"></div>
-  </body>
+</head>
+<body>
+<div id="App"></div>
+</body>
 </html>
