--- a/src/index.html
+++ b/src/index.html
@@ -2,20 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Quantico"
+      rel="stylesheet"
+    />
     <link
       crossorigin="anonymous"
       href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
       integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css?family=Quantico"
-      rel="stylesheet"
-    />
     <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase.js"></script>
-    <base href="/" />
-    <meta content="ie=edge" http-equiv="X-UA-Compatible" />
 
     <link
       crossorigin="anonymous"
@@ -25,8 +24,24 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Authors's haven</title>
+    <base href="/" />
   </head>
   <body>
     <div id="App"></div>
   </body>
+  <script
+    src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"
+  ></script>
 </html>
